--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ header .gnb a{
   margin-bottom: 15px;
 }
 .recom-text{
-  padding-left: 20px;
+  padding: 10px;
 }
 .card{
   border: 1px solid rgba(24, 24, 24, 0.3);
@@ -95,11 +95,11 @@ header .gnb a{
 }
 .card h3{
   line-height: 1.6;
-  font-size: 24px;
+  font-size: 22px;
 }
 .card img{
   width: 100%;
-  margin-bottom: 15px;
+  min-height: 150px;
 }
 .card .text{
   word-break: keep-all ;
@@ -330,4 +330,64 @@ button[role="tab"].active {
 }
 .tab-panel .tab p{
   margin-bottom: 15px;
+}
+
+
+/* mywalk */
+.mywalkMov video{
+  max-width: 100%;
+}
+.diary h2{
+  margin-bottom: 20px;
+}
+.diary textarea{
+  display: block;
+  margin: 0 auto;
+  border: none;
+  border-radius: 0 0 30px 0;
+  background-color: #fff5e4;
+  font-size: 16px;
+  color: var(--muted);
+  font-family: "Pretendard Variable";
+  width: 90%;
+  height: 200px;
+  margin-bottom: 30px;
+}
+.diary textarea[placeholder]{
+  padding: 10px;
+  font-style: italic;
+}
+.reviewArea{
+  background-color: whitesmoke;
+  padding: 20px;
+}
+.reviewArea h2{
+  margin-bottom: 15px;
+}
+.reviewArea .review1{
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  border: 1px solid var(--muted);
+  padding: 10px;
+  border-radius: var(--radius);
+  background-color: var(--white);
+  box-shadow: 1px 4px 4px rgba(0,0,0,0.3);
+  margin-bottom: 15px;
+}
+.reviewArea .review1 figure{
+  width: 84px; height: 100px;
+  border-radius: var(--radius);
+  background-color: var(--brand3);
+  overflow: hidden;
+}
+.reviewArea .review1 figure img{
+  width: 100%;
+  height: 100%;
+
+}
+.reviewArea .review1 p{
+  width: 80%;
+  font-size: 16px;
+  line-height: 1.6;
 }
